--- a/src/Components/Timers/ProductivityTimer.css
+++ b/src/Components/Timers/ProductivityTimer.css
@@ -1,3 +1,11 @@
+.productivity-content {
+  border-radius: 12px;
+  padding: 1.5rem 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .productivity-timer {
   background-color: #f5f5f5; /* light card background */
   border-radius: 12px;
@@ -29,18 +37,12 @@
   color: #333;
 }
 
-.productivity-timer .timer-progress {
-  margin-top: 1rem;
-  width: 100%;
-  height: 8px;
-  background-color: #ddd;
-  border-radius: 4px;
-  overflow: hidden;
+#pause-btn {
+  color: rgb(255, 255, 255);
+    background-color: rgb(121, 148, 160);
 }
 
-.productivity-timer .timer-progress-bar {
-  height: 100%;
-  background-color: #4caf50; /* green progress bar */
-  width: 0%; /* dynamically updated in React */
-  transition: width 1s linear;
+#extend-btn {
+    color: rgb(255, 255, 255);
+    background-color: rgb(121, 148, 160);
 }
