--- a/src/Components/TodoList/TodoList.css
+++ b/src/Components/TodoList/TodoList.css
@@ -1,4 +1,5 @@
 .todo-content {
+  color: #555;
   display: flex;
   flex-direction: column;
   border: 1px solid #089f4c;
